--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <script type="module">
 //import { rnd } from "https://js.sabae.cc/rnd.js";
-import { RandomMT } from "./RandomMT.js";
+import { RandomMT } from "https://code4fukui.github.io/RandomMT/RandomMT.js";
 
 const seed = (new Date().getTime() / (1000 * 60)) >> 0;
 const r = new RandomMT(seed % 10000);
